# rockland_sample_cleaning

./: .gitignore  README.md  pyproject.toml
labs/: comparison_nwb_raw.ipynb  dev_lab.ipynb  dev_lab_bids_explorer_electrodes.py  dev_lab_events_explorer.py  dev_lab_nwb.py  error_cst.csv  sub-M10901084_ses-MOBI1A_task-checkerboard_run-01_eventsRAW.csv  sub-M10901084_ses-MOBI1A_task-checkerboard_run-01_eventsXDF.csv  sub-M10901084_ses-MOBI1A_task-flanker_run-01_eventsRAW.csv  sub-M10901084_ses-MOBI1A_task-flanker_run-01_eventsXDF.csv  sub-M10901084_ses-MOBI1A_task-passivepresent_run-01_eventsRAW.csv  sub-M10901084_ses-MOBI1A_task-passivepresent_run-01_eventsXDF.csv
logs/: nohup.out
src/: __init__.py  channels_handling.py  cleaning_pipeline.py  cleaning_pipeline_events_correction.py  cleaning_pipeline_nwb.py  read_file.py  report_plotting.py
src/rockland_sample_cleaning/: channels_handling.py  cleaning_pipeline.py  cleaning_pipeline_nwb.py  fix_electrodes_issue.py  read_file.py  report_plotting.py
