[tool.poetry]
name = "rockland-sample-cleaning"
version = "0.1.0"
description = "Package to clean Rockland Sample"
authors = ["Samuel Louviot <sam.louviot@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "rockland_sample_cleaning", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.0"
pandas = "^2.2.0"
matplotlib = "^3.8.0"
mne = "^1.6.0"
pyprep = "^0.4.0"
pytz = "^2024.1"
mne-bids = "^0.15.0"
pyxdf = "^1.16.0"
seaborn = "^0.13.0"
bids-explorer = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rockland-clean = "rockland_sample_cleaning.cleaning_pipeline:main"
